--- a/front-end/src/app/profile/profile.component.html
+++ b/front-end/src/app/profile/profile.component.html
@@ -1,1 +1,19 @@
-<h1>Profile</h1>
+<div class="profile">
+  <div class="grid-row">
+    <div class="grid-row__col grid-row__col--2">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="grid-row__col grid-row__col--10">
+      <app-header></app-header>
+      <main>
+        <div class="grid-row">
+          <div class="grid-row__col grid-row__col--12">
+            <h1 class="text-center">
+              Profile Content
+            </h1>
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
+</div>
