--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -1,3 +1,32 @@
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Legal Disclaimer</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>
+      Please be advised that knowingly and willfully making any materially false, fictitious, or fraudulent statement or representation to a federal
+      government agency, including the Federal Election Commission, is punishable under the provisions of 18 U.S.C. § 1001. The Commission may report
+      apparent violations to the appropriate law enforcement authorities. 52 U.S.C. § 30107(a)(9).
+    </p>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-primary"
+      (click)="modal.close('Save click')"
+    >
+      Agree
+    </button>
+  </div>
+</ng-template>
 <header>
   <div class="header">
     <div class="header--nav">
@@ -15,6 +44,16 @@
         </li>
         <li>
           Tools
+        </li>
+        <li>
+          <!-- button class="btn btn-lg btn-outline-primary" (click)="open(content)">Legal</button -->
+          <a
+            [routerLink]=""
+            (click)="open(content)"
+            role="button"
+          >
+            Legal
+          </a>
         </li>
         <li>
           Help
