--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -4,6 +4,11 @@ $fa-font-path: '../node_modules/font-awesome/fonts';
 
 @import './app/shared/scss/global';
 
+@import '../node_modules/bootstrap/scss/utilities';
+@import '../node_modules/bootstrap/scss/buttons';
+@import '../node_modules/bootstrap/scss/transitions';
+@import '../node_modules/bootstrap/scss/modal';
+
 body {
   color: $white;
   font-family: arial, helvetica, sans-serif;
