--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -74,7 +74,7 @@
           </a>
         </li>
         <li>
-          <a [routerLink]="['/']" (click)="logout()">
+          <a [routerLink]="['/logout']" (click)="logout()">
             Logout
           </a>
         </li>
