--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="grid-row__col grid-row__col--6 text-right">
           <div class="right-text">
-            <a class="link" href="#">
+            <a class="link" href="https://www.fec.gov/data/" target="_blank">
               Forgot Committee ID
             </a>
           </div>
@@ -69,7 +69,7 @@
         </div>
         <div class="grid-row__col grid-row__col--6 text-right">
           <div class="right-text">
-            <a class="link" href="#">
+            <a class="link" href="https://test-webforms.fec.gov/psa/index.htm" target="_blank">
               Forgot Password
             </a>
           </div>
@@ -110,7 +110,7 @@
 
       <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
-          <a class="link" href="#">
+          <a class="link" href="https://test-webforms.fec.gov/webforms/form1/index.htm" target="_blank">
             Do you need to register your committee?
           </a>
         </div>
