--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -30,7 +30,7 @@
 <header>
   <div class="header">
     <div class="header--nav">
-      <a href="#" role="button">
+      <a [routerLink]="" role="button">
         <i class="bars-icon"></i>
       </a>
     </div>
