--- a/front-end/src/app/login/login.component.scss
+++ b/front-end/src/app/login/login.component.scss
@@ -16,6 +16,8 @@
     min-height: 375px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 15px;
+    padding-top: 15px;
     text-align: center;
     width: 500px;
     .grid-row {
@@ -46,6 +48,13 @@
           margin-bottom: 15px;
           margin-top: 30px;
           width: 460px;
+        }
+        .logged-out-msg {
+          color: $blue;
+          font-size: 1em;
+          font-weight: bold;
+          margin-bottom: 20px;
+          margin-top: 10px;
         }
       }
     }
