--- a/front-end/src/app/shared/scss/_custom-mixins.scss
+++ b/front-end/src/app/shared/scss/_custom-mixins.scss
@@ -1,120 +1,6 @@
-/**
- * Makes a text input.
- *
- * @param      {String}  $width       [null]  - The width
- * @param      {String}  $height      [null]  - The height
- * @param      {String}  $fontSize    [null]  - The font size
- * @param      {String}  $lineHeight  [null]  - The line height
- * @param      {String}  $paddingY    [null]  - The padding y
- * @param      {String}  $paddingX    [null]  - The padding x
- *
- */
-@mixin make-text-input($width: null, $height: null, $fontSize: null, $color: null,
-  $lineHeight: null, $paddingY: null, $paddingX: null) {
-  display: block;
-  @if ($width) {
-    width: $width;
-  } @else {
-    width: $input-width;
-  }
-  @if ($height) {
-    height: $height;
-  } @else {
-    height: $input-height;
-  }
-  @if ($fontSize) {
-    font-size: $fontSize;
-  } @else {
-    font-size: $font-size-base;
-  }
-  @if ($lineHeight) {
-    line-height: $lineHeight;
-  } @else {
-    line-height: $input-line-height;
-  }
-  @if ($paddingY) {
-    padding-top: $paddingY;
-    padding-bottom: $paddingY;
-  } @else {
-    padding-top: $input-padding-y;
-    padding-bottom: $input-padding-y;
-  }
-  @if ($paddingX) {
-    padding-left: $paddingX;
-    padding-right: $paddingX;
-  } @else {
-    padding-left: $input-padding-x;
-    padding-right: $input-padding-x;
-  }
-  color: $input-color;
-  background-color: $input-bg;
-  background-clip: padding-box;
-  border: $input-border-width solid $input-border-color;
-  border-radius: $input-border-radius;
-}
+@import 'mixins/forms';
+@import 'mixins/utility';
 
-/* @mixin make-button($backgroundColor: null, $hoverColor: null, $paddingY: null, paddingX: null,
-  $fontSize: null, $lineHeight: null, $borderRadius: null) {
 
-  @include button-variant($primaryBlue, $primaryBlue);
-  @include button-size($input-btn-padding-y, $input-btn-padding-x, 1.5em, $input-btn-line-height, $btn-border-radius);
-} */
 
-//Media query mixin
 
-@mixin media($type) {
-  @if $type == tablet {/* Small devices (tablets, >= 768px and <= 991px) */
-    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-      @content;
-    }
-  }
-  @else if $type == mediumDesktop {/* Medium devices (desktops, >= 992px and <= 1100px) */
-    @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
-      @content;
-    }
-  }
-  @else if $type == largeDesktop {/* Large devices (large desktops, 1200px and up) */
-    @media (min-width: $screen-lg-min) {
-      @content;
-    }
-  }
-}
-
-/**
- * Targets Webkit based browsers. (e.g. Chrome, Safari)
- *
- */
-@mixin webkitBrowser() {
-  @media screen and (-webkit-min-device-pixel-ratio:0) {
-     @content;
-  }
-}
-
-@mixin safariOnly() {
-  @media not all and (min-resolution:.001dpcm) {
-    @content;
-  }
-}
-
-@mixin form-btns() {
-  .forms__btn-container {
-    margin: 0 auto;
-    .btn-container-row {
-      @include clearfix();
-      border-bottom: 1px solid $dustyGray;
-      height: 55px;
-      margin-bottom: 10px;
-      width: 100%;
-      .btn {
-        margin-right: 0;
-      }
-    }
-    .btn-left {
-      float: left;
-    }
-    .btn-right {
-      float: right;
-    }
-    @include clearfix();
-  }
-}
