--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -6,22 +6,12 @@
         <img src="assets/img/logo-transparent.png" />
       </a>
     </div>
-    <div class="app__side-nav-toggle">
-      <a class="side-nav-toggle"
-        role="button"
-        (click)="toggleSideNav()"
-      >
-        <i class="bars-icon">
-          <span class="sr-only">Toggle Sidebar</span>
-        </i>
-      </a>
-    </div>
     <div class="app__top-nav">
       <app-header></app-header>
     </div>
   </div>
   <div class="app__side-nav">
-    <app-sidebar></app-sidebar>
+    <app-sidebar (status)='onNotify($event)'></app-sidebar>
   </div>
   <main>
     <div class="app__content-wrapper">
