--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -1,5 +1,15 @@
 <aside>
   <div class="sidebar">
+    <div class="sidebar__toggle">
+      <a class="toggle-sidebar"
+        role="button"
+        (click)="toggleSideNav()"
+      >
+        <i [ngClass]="[showSidebar ? 'close-icon' : 'bars-icon']">
+          <span class="sr-only">Toggle Sidebar</span>
+        </i>
+      </a>           
+    </div>    
     <nav>
       <div class="sidebar__nav">
         <div class="sidebar__nav--header">
