--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -1,14 +1,31 @@
 <div class="app-container"
   [ngClass]="showSideBar === false ? 'active' : ''">
   <div class="app__top">
-    <div class="app__top-logo">
-      <a [routerLink]="['/dashboard']">
-        <img src="assets/img/logo-transparent.png" />
-      </a>
-    </div>
-    <div class="app__top-nav">
-      <app-header></app-header>
-    </div>
+    <nav class="navbar py-0 navbar-expand-lg">
+      <div class="navbar-brand app__top-logo">
+        <a [routerLink]="['/dashboard']">
+          <img src="assets/img/logo-transparent.png" />
+        </a>
+      </div>
+      <button 
+        class="navbar-toggler" 
+        type="button" 
+        data-toggle="collapse" 
+        data-target="#navbarSupportedContent" 
+        aria-controls="navbarSupportedContent" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation"
+      >
+        <span class="sr-only">Toggle navigation</span>
+        <span class="bars-icon"></span>
+      </button>             
+      <div 
+        class="collapse navbar-collapse app__top-nav" 
+        id="navbarSupportedContent"
+      >       
+        <app-header></app-header>
+      </div>
+    </nav>
   </div>
   <div class="app__side-nav">
     <app-sidebar (status)='onNotify($event)'></app-sidebar>
