--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -1,62 +1,62 @@
-<header>
-  <div class="header">
-    <div class="header__nav">
-      <div class="header__search">
-        <input
-          type="text"
-          name="search"
-          class="search-input"
-          placeholder="Search for..."
-        />
-      </div>
-      <div class="header__links">
-        <ul class="nav-links">
-          <li>
-            <a [routerLink]="['/reports']">
-              Reports
-            </a>
-          </li>
-          <li>
-            <a [routerLink]="['/contributors']">
-              Contributors
-            </a>
-          </li>
-          <li>
-            <a [routerLink]="['/tools']">
-              Tools
-            </a>
-          </li>
-          <li>
-            Help
-          </li>
-          <li>
-            <a class="icon-link" role="button">
-              <i class="notifications-icon icon" aria-hidden="true"></i>
-              <span class="ico n-link-text">Notifications</span>
-            </a>
-          </li>
-          <li>
-            <a [routerLink]="['/profile']" class="icon-link">
-              <i class="profile-icon icon" aria-hidden="true"></i>
-              <span class="icon-link-text">Profile</span>
-            </a>
-          </li>
-          <li>
-            <div ngbDropdown placement="bottom-left" class="d-inline-block">
-              <div class="dropdown-toggle" role="button" id="dropdownMenu" ngbDropdownToggle>
-                <i class="settings-icon icon" aria-hidden="true"></i>
-              </div>
-              <div ngbDropdownMenu aria-labelledby="dropdownMenu">
-                <div>
-                  <a [routerLink]="['/logout']" (click)="logout()">
-                    Logout
-                  </a>
-                </div>
+<div class="header">
+  <div class="header__nav">
+    <div class="header__search">
+      <input
+        type="text"
+        name="search"
+        class="search-input"
+        placeholder="Search for..."
+      />
+    </div>
+    <div class="header__links">
+      <ul class="nav navbar-nav nav-links">
+        <li class="nav-item">
+          <a [routerLink]="['/reports']">
+            Reports
+          </a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/contributors']">
+            Contributors
+          </a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/tools']">
+            Tools
+          </a>
+        </li>
+        <li class="nav-item">
+          Help
+        </li>
+        <li class="nav-item">
+          <a class="icon-link" role="button">
+            <i class="notifications-icon icon" aria-hidden="true"></i>
+            <span class="ico n-link-text">Notifications</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/profile']" class="icon-link">
+            <i class="profile-icon icon" aria-hidden="true"></i>
+            <span class="icon-link-text">Profile</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <div ngbDropdown placement="bottom-left" class="d-inline-block">
+            <div class="dropdown-toggle" role="button" id="dropdownMenu" ngbDropdownToggle>
+              <i class="settings-icon icon" aria-hidden="true"></i>
+            </div>
+            <div ngbDropdownMenu aria-labelledby="dropdownMenu">
+              <div>
+                <a [routerLink]="['/logout']" (click)="logout()">
+                  Logout
+                </a>
               </div>
             </div>
-          </li>
-        </ul> <!-- ./nav-links -->
-      </div> <!-- ./header__links -->
-    </div> <!-- ./header__nav -->
-  </div> <!-- ./header -->
-</header>
+          </div>
+        </li>
+      </ul> <!-- ./nav-links -->
+    </div> <!-- ./header__links -->
+  </div> <!-- ./header__nav -->
+</div> <!-- ./header -->
+
+
