--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -1,8 +1,8 @@
 @import '../../scss/global';
 .header {
-  background-color: $dustyGray;
   color: $black;
   height: 60px;
+  width: 100%;
   .header__nav {
     display: block;
     width: 100%;
@@ -15,33 +15,40 @@
     }
     .header__search {
       display: inline-block;
-      padding-left: 10px;
+      padding-left: 0;
       padding-top: 10px;
       width: 200px;
       @include media(tablet) {
-        width: 10%;
+        padding-left: 5px;
+        width: 15%;
       }
       @include media(mediumDesktop) {
-        width: 10%;
+        padding-left: 5px;
+        width: 15%;
+        input[type='text'] {
+          @include make-text-input(85%, 1.5em, 1em, 1em);
+        }          
       }
       @include media(largeDesktop) {
-        width: 10%;
-      }
-      input[type='text'] {
-        @include make-text-input(100%, 1.5em, 1em, 1em);
+        padding-left: 15px;
+        width: 20%;
+        input[type='text'] {
+          @include make-text-input(100%, 1.5em, 1em, 1em);
+        }        
       }
     }
     .header__links {
       display: inline-block;
-      @include media(tablet) {
-        width: 55%;
-      }
+      /* @include media(tablet) {
+        width: 74%;
+      }*/
       @include media(mediumDesktop) {
-        width: 55%;
-      }
+        padding-left: 15px;
+        width: 80%;
+      } 
       @include media(largeDesktop) {
         padding-left: 20px;
-        width: 55%;
+        width: 74%;
       }
       .nav-links {
         list-style-type: none;
@@ -54,8 +61,8 @@
             width: 70px;
           }
           @include media(mediumDesktop) {
-            padding-left: 15px;
-            padding-right: 15px;
+            padding-left: 10px;
+            padding-right: 10px;
             width: auto;
           }
           @include media(largeDesktop) {
