--- a/front-end/src/app/shared/scss/_global.scss
+++ b/front-end/src/app/shared/scss/_global.scss
@@ -4,6 +4,8 @@
 @import '../../../../node_modules/bootstrap/scss/dropdown';
 @import '../../../../node_modules/bootstrap/scss/tooltip';
 @import '../../../../node_modules/bootstrap/scss/card';
+@import '../../../../node_modules/bootstrap/scss/nav';
+@import '../../../../node_modules/bootstrap/scss/navbar';
 
 @import './custom-variables';
 @import './custom-colors';
