--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -15,6 +15,7 @@
         aria-controls="navbarSupportedContent" 
         aria-expanded="false" 
         aria-label="Toggle navigation"
+        (click)="toggleTopNav()"
       >
         <span class="sr-only">Toggle navigation</span>
         <span class="bars-icon"></span>
@@ -22,6 +23,7 @@
       <div 
         class="collapse navbar-collapse app__top-nav" 
         id="navbarSupportedContent"
+        [ngClass]="{ 'toggleMenuStyle' : toggleMenu === true }"
       >       
         <app-header></app-header>
       </div>
