--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -18,7 +18,7 @@
     right: 0;
     vertical-align: middle;
     width: 100%;
-    z-index: 1;
+    z-index: 1001;
     .navbar {
       padding-left: 0 !important;
       .app__top-logo {
@@ -51,8 +51,19 @@
       .app__top-nav {
         float: left;
         width: auto;
-        @include media(tablet) {
-        
+        &.toggleMenuStyle {
+          display: block;
+          float: none;
+          height: 200px;
+          @include media(tablet) {
+            height: 200px;
+          }
+          @include media(mediumDesktop) {
+            height: 60px; 
+          }         
+          @include media(largeDesktop) {
+            height: 60px;
+          }           
         }
         @include media(mediumDesktop) {
           width: 65%;
@@ -86,7 +97,6 @@
   main {
     height: 98%;
     .app__content-wrapper {
-      //height: 95%;
       padding-top: 60px;
       transition: all 0.4s ease 0s;
       width: 100%;
