--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -1,11 +1,23 @@
 @import '../../scss/global';
 .header {
   color: $black;
+  display: block;
   height: 60px;
   width: 100%;
   .header__nav {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    @include media(tablet) {
+      display: flex;
+      flex-direction: column;
+    }
+    @include media(mediumDesktop) {
+      display: block;
+    }         
+    @include media(largeDesktop) {
+      display: block;
+    }    
     a {
       color: $black;
       text-decoration: none;
@@ -14,15 +26,29 @@
       }
     }
     .header__search {
-      display: inline-block;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      order: 2;
       padding-left: 0;
       padding-top: 10px;
-      width: 200px;
+      width: 100%;
+      input[type='text'] {
+        @include make-text-input(98%, 1.5em, 1em, 1em);
+      }       
       @include media(tablet) {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;   
+        order: 2;     
         padding-left: 5px;
-        width: 15%;
+        width: 100%;
+        input[type='text'] {
+          @include make-text-input(98%, 1.5em, 1em, 1em);
+        }         
       }
       @include media(mediumDesktop) {
+        display: inline-block;
         padding-left: 5px;
         width: 15%;
         input[type='text'] {
@@ -30,6 +56,7 @@
         }          
       }
       @include media(largeDesktop) {
+        display: inline-block;
         padding-left: 15px;
         width: 20%;
         input[type='text'] {
@@ -38,15 +65,25 @@
       }
     }
     .header__links {
-      display: inline-block;
-      /* @include media(tablet) {
-        width: 74%;
-      }*/
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      order: 1;
+      width: 100%;
+      @include media(tablet) {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        order: 1;
+        width: 100%;
+      }
       @include media(mediumDesktop) {
+        display: inline-block;
         padding-left: 15px;
         width: 80%;
       } 
       @include media(largeDesktop) {
+        display: inline-block;
         padding-left: 20px;
         width: 74%;
       }
@@ -58,7 +95,7 @@
           text-align: center;
           vertical-align: middle;
           @include media(tablet) {
-            width: 70px;
+            width: 100%;
           }
           @include media(mediumDesktop) {
             padding-left: 10px;
