--- a/front-end/src/app/forms/forms.component.scss
+++ b/front-end/src/app/forms/forms.component.scss
@@ -11,13 +11,37 @@
   .main-content {
     display: flex;
     flex: 1;
+    padding-left: 20%;
     width: 100%;
+    @include media(tablet) {
+      padding-left: 20%;
+    }
+    @include media(mediumDesktop) {
+      padding-left: 0;
+    }         
+    @include media(largeDesktop) {
+      padding-left: 0;
+    }     
     .form__alerts {
       background-color: $bombay;
-      float: left;
-      min-height: 100%;
-      position: relative;
-      width: 20%;
+      display: none;
+      @include media(tablet) {
+        display: none;
+      }
+      @include media(mediumDesktop) {
+        display: inline-block;
+        float: left;
+        min-height: 100%;
+        position: relative;
+        width: 20%;      
+      }         
+      @include media(largeDesktop) {
+        display: inline-block;
+        float: left;
+        min-height: 100%;
+        position: relative;
+        width: 20%;      
+      }       
     }
     .form__content {
       float: left;
