--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -10,7 +10,7 @@
     width: 100%;
     @include media(tablet) {
       display: flex;
-      flex-direction: column;
+      flex-direction: colummn;
     }
     @include media(mediumDesktop) {
       display: block;
@@ -34,7 +34,9 @@
       padding-top: 10px;
       width: 100%;
       input[type='text'] {
-        @include make-text-input(98%, 1.5em, 1em, 1em);
+        @include make-text-input(90%, 1.5em, 1em, 1em);
+        margin-left: 10px;
+        margin-right: 10px;
       }       
       @include media(tablet) {
         display: block;
@@ -44,7 +46,9 @@
         padding-left: 5px;
         width: 100%;
         input[type='text'] {
-          @include make-text-input(98%, 1.5em, 1em, 1em);
+          @include make-text-input(90%, 1.5em, 1em, 1em);
+          margin-left: 10px;
+          margin-right: 10px;          
         }         
       }
       @include media(mediumDesktop) {
@@ -91,18 +95,23 @@
         list-style-type: none;
         width: 100%;
         li {
-          display: inline-block;
+          display: block;
+          margin-bottom: 10px;
           text-align: center;
           vertical-align: middle;
           @include media(tablet) {
+            display: block;
+            margin-bottom: 10px;
             width: 100%;
           }
           @include media(mediumDesktop) {
+            display: inline-block;
             padding-left: 10px;
             padding-right: 10px;
             width: auto;
           }
           @include media(largeDesktop) {
+            display: inline-block;
             padding-left: 15px;
             padding-right: 15px;
             width: auto;
@@ -110,7 +119,7 @@
           .dropdown-toggle {
             cursor: pointer;
           }
-          .dropdown {
+          .dropdown {                    
             .dropdown-menu {
               left: -45px !important;
               text-align: center;
