--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -27,28 +27,24 @@
     }
     .header__search {
       display: block;
-      margin-left: auto;
-      margin-right: auto;
       order: 2;
       padding-left: 0;
       padding-top: 10px;
       width: 100%;
       input[type='text'] {
-        @include make-text-input(90%, 1.5em, 1em, 1em);
-        margin-left: 10px;
-        margin-right: 10px;
+        @include make-text-input(300px, 1.5em, 1em, 1em);
+        margin-left: auto;
+        margin-right: auto;
       }       
       @include media(tablet) {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;   
+        display: block;  
         order: 2;     
         padding-left: 5px;
         width: 100%;
         input[type='text'] {
-          @include make-text-input(90%, 1.5em, 1em, 1em);
-          margin-left: 10px;
-          margin-right: 10px;          
+          @include make-text-input(400px, 1.5em, 1em, 1em);       
+          margin-left: auto;
+          margin-right: auto;            
         }         
       }
       @include media(mediumDesktop) {
@@ -88,7 +84,7 @@
       } 
       @include media(largeDesktop) {
         display: inline-block;
-        padding-left: 20px;
+        padding-left: 30px;
         width: 74%;
       }
       .nav-links {
