--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -1,5 +1,7 @@
-<div class="app-container"
-  [ngClass]="showSideBar === false ? 'active' : ''">
+<div 
+  class="app-container"
+  [ngClass]="showSideBar === true ? 'active' : ''"
+>
   <div class="app__top">
     <nav class="navbar py-0 navbar-expand-lg">
       <div class="navbar-brand app__top-logo">
