--- a/front-end/src/app/forms/forms.component.scss
+++ b/front-end/src/app/forms/forms.component.scss
@@ -25,6 +25,19 @@
     .form__alerts {
       background-color: $bombay;
       display: none;
+      &.show-alerts {
+        @include media(tablet) {
+        
+        }
+        @include media(mediumDesktop) {
+          padding-left: 60px;
+          width: 300px;         
+        }         
+        @include media(largeDesktop) {
+          padding-left: 60px;
+          width: 300px; 
+        }         
+      }
       @include media(tablet) {
         display: none;
       }
@@ -33,20 +46,20 @@
         float: left;
         min-height: 100%;
         position: relative;
-        width: 20%;      
+        width: 100px;      
       }         
       @include media(largeDesktop) {
         display: inline-block;
         float: left;
         min-height: 100%;
         position: relative;
-        width: 20%;      
+        width: 100px;      
       }       
     }
     .form__content {
       float: left;
       min-height: 100%;
-      width: 75%;
+      width: 100%;
       .grid-row {
         margin: 0;
         .grid-row__col {
