--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
 <div 
   class="app-container"
-  [ngClass]="showSideBar === true ? 'active' : ''"
+  [ngClass]="sideBarClass"
 >
   <div class="app__top">
     <nav class="navbar py-0 navbar-expand-lg">
