--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         role="button"
         (click)="toggleSideNav()"
       >
-        <i [ngClass]="[showCloseIcon ? 'close-icon' : 'bars-icon']">
+        <i [ngClass]="iconClass">
           <span class="sr-only">Toggle Sidebar</span>
         </i>
       </a>           
