--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -3,7 +3,6 @@
 .app-container {
   color: $black;
   height: 100%;
-  padding-left: $sideBarWidth;
   transition: all 0.4s ease 0s;
   &.active {
     padding-left: 0;
@@ -11,50 +10,94 @@
       left: 0;
     }
   }
-  .app__top {
-    left: 0;
+ .app__top {
+    background-color: $dustyGray;
+    height: 60px;
     position: fixed;
     right: 0;
     vertical-align: middle;
     width: 100%;
-    z-index: 1;
-    .app__top-logo {
-      float: left;
-      margin-right: 25px;
-      width: auto;
-      img {
-        padding-top: 5px;
-        width: 350px;
+    z-index: 1001;    
+    .navbar {
+      background-color: $dustyGray;
+      height: 60px;
+      margin: 0 !important;
+      padding: 0 !important;          
+      .app__top-logo { 
+        margin: 0 !important;
+        padding: 0 !important;
+        img {
+          width: 250px;
+          @include media(tablet) {
+            width: 270px;
+          }
+          @include media(mediumDesktop) {
+            width: 280px;
+          }         
+          @include media(largeDesktop) {
+            width: 350px;
+          }           
+        }
+      } // .app__top-logo
+      .app__top-nav {
+        float: left;
+        width: auto;
+        &.toggleMenuStyle {  
+          background: $dustyGray;
+          display: block;
+          float: none;
+          height: 335px;
+          position: absolute;
+          top: 60px;
+          width: 100%;
+          @include media(tablet) {
+            display: block;
+            float: none;
+            height: 335px;
+            position: absolute;
+            top: 60px;
+            width: 100%;
+          }
+          @include media(mediumDesktop) {
+            height: 60px;
+            position: relative;
+            top: 0;
+          }         
+          @include media(largeDesktop) {
+            height: 60px;
+            position: relative;
+            top: 0;
+          }                 
+        }        
+        @include media(mediumDesktop) {
+          width: auto;
+        }           
+        @include media(mediumDesktop) {
+          width: 65%;
+        }         
+        @include media(largeDesktop) {
+          width: 73%;
+        }         
       }
-    } // .app__top-logo
-    .app__side-nav-toggle {
-      float: left;
-      padding-top: 20px;
-      .side-nav-toggle {
-        color: $black;
-        cursor: pointer;
-        text-decoration: none;
-      }
-    }// .app__side-nav-toggle
+    } 
     @include clearfix();
-  } // .app__top
+  } // .app__top  
   .app__side-nav {
     height: 100%;
-    left: $sideBarWidth;
-    margin-left: -$sideBarWidth;
+    left: -245px;
     position: fixed;
-    top: 25px;
+    top: 60px;
     transition: all 0.4s ease 0s;
     width: $sideBarWidth;
     z-index: 1000;
-  } // .app__side-nav
+  } // .app__side-nav  
   main {
     height: 98%;
     .app__content-wrapper {
-      //height: 95%;
       padding-top: 60px;
       transition: all 0.4s ease 0s;
       width: 100%;
+      z-index: 0;
     }
-  }
+  }      
 }
