--- a/front-end/src/app/login/login.component.scss
+++ b/front-end/src/app/login/login.component.scss
@@ -59,6 +59,10 @@
         .right-text {
           padding-right: 15px;
         }
+        .error__committee-id,
+        .error__password-error {
+          @extend .text-error;
+        }
         .login__btn {
           @include button-variant($primaryBlue, $primaryBlue);
           @include button-size($input-btn-padding-y, $input-btn-padding-x, 1.5em, $input-btn-line-height, $btn-border-radius);
@@ -77,7 +81,6 @@
           }
         }
         .logged-out-msg {
-          color: $blue;
           font-size: 1em;
           font-weight: bold;
           margin-bottom: 20px;
